--- a/index.html
+++ b/index.html
@@ -1,2 +1,115 @@
-<h1>Ohmyfood</h1>
-<p>Test</p>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Ohmyfood - Accueil</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sass/main.css">
+    <script src="https://kit.fontawesome.com/16ae0561bb.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header class="headerIndex">
+        <img src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
+        <div class="headerIndex__location">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Paris, Belleville</p>
+        </div>
+    </header>
+
+    <main>
+        <section class="Infogroup">
+            <h1 class="IndexTitle">Réservez le menu qui vous convient</h1>
+            <p class="Infogroup__txt">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <button class="Btn">Explorer nos restaurants</button>
+        </section>
+        <section class="Fonctionnement">
+            <h2 class="IndexSubtitle">Fonctionnement</h2>
+            <div class="Fonctionnement__list">
+                <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
+                <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-list-ul"></i>Composez votre menu</p>
+                <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-store"></i>Dégustez au restaurant</p>
+            </div>
+        </section>
+        <section class="restaurants">
+            <h2 class="IndexSubtitle">Restaurants</h2>
+            <div class="restaurants__cards">
+                <a href="restaurants/lapalettedugout.html" alt="Restaurant La palette du goût">
+                    <article class="restaurants__card">
+                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
+                        <div class="restaurants__card--content">
+                            <div>
+                                <h3 class="restaurants__card--title">La palette du goût</h3>
+                                <p class="restaurants__card--subtitle">Ménilmontant</p>
+                            </div>
+                            <i class="fa-xl fa-regular fa-heart"></i>
+                        </div>
+                    </article>
+                </a>
+                <a href="restaurants/lanoteenchantee.html" alt="Restaurant La note enchantée">
+                    <article class="restaurants__card">
+                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+                        <div class="restaurants__card--content">
+                            <div>
+                                <h3 class="restaurants__card--title">La note enchantée</h3>
+                                <p class="restaurants__card--subtitle">Charonne</p>
+                            </div>
+                            <i class="fa-xl fa-regular fa-heart"></i>
+                        </div>
+                    </article>
+                </a>
+                <a href="restaurants/alafrancaise.html" alt="Restaurant à la française">
+                    <article class="restaurants__card">
+                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
+                        <div class="restaurants__card--content">
+                            <div>
+                                <h3 class="restaurants__card--title">À la française</h3>
+                                <p class="restaurants__card--subtitle">Cité Rouge</p>
+                            </div>
+                            <i class="fa-xl fa-regular fa-heart"></i>
+                        </div>
+                    </article>
+                </a>
+                <a href="restaurants/ledelicedessens.html" alt="Restaurant Le délice des sens">
+                    <article class="restaurants__card">
+                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
+                        <div class="restaurants__card--content">
+                            <div>
+                                <h3 class="restaurants__card--title">Le délice des sens</h3>
+                                <p class="restaurants__card--subtitle">Folie-Méricourt</p>
+                            </div>
+                            <i class="fa-xl fa-regular fa-heart"></i>
+                        </div>
+                    </article>
+                </a>
+            </div>
+                </a>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <img src="assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="footer__logo">
+        <ul class="footer__list">
+            <li>
+                <a href="#">
+                    <div  class="footer__list--icon">
+                        <i class="fa-solid fa-utensils"></i>Proposer un restaurant
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <div  class="footer__list--icon">
+                        <i class="fa-xs fa-solid fa-handshake-angle"></i>Devenir partenaire
+                    </div>
+                </a>
+            </li>   
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </footer>
+</body>
+</html>
