--- a/index.html
+++ b/index.html
@@ -92,24 +92,22 @@
     </main>
     <footer>
         <img src="assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="footer__logo">
-        <ul class="footer__list">
-            <li>
-                <a href="#">
-                    <div  class="footer__list--icon">
-                        <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div  class="footer__list--icon">
-                        <i class="fa-xs fa-solid fa-handshake-angle"></i>Devenir partenaire
-                    </div>
-                </a>
-            </li>   
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="footer__list">
+            <a href="#">
+                <div  class="footer__list--icon">
+                    <i class="fa-solid fa-utensils"></i>
+                    Proposer un restaurant
+                </div>
+            </a>
+            <a href="#">
+                <div  class="footer__list--icon">
+                    <i class="fa-xs fa-solid fa-handshake-angle"></i>
+                    Devenir partenaire
+                </div>
+            </a>
+            <a href="#" class="">Mentions légales</a>
+            <a href="#">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
