Intégration et responsive design

--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -13,13 +13,15 @@
 
 <body>
     <header class="headerMenu">
+        <div class="headerMenu__retour">
             <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
+        </div>
+        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française" class="restaurant__img">
     </header>
 
     <main class="main__menu">
         <div class="menu__card">
-            <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
             <div class="menu__card--content">
                 <h1 class="menu__card--title">À la française</h1>
                 <i class="fa-xl fa-regular fa-heart"></i>
@@ -28,73 +30,73 @@
         <section class="menu">
             <h2 class="subtitle-border">ENTRÉES</h2>
             <div class="menu__content">
-                <h3>Tartare de poulpe acidulé</h3>
                 <div class="menu__items">
+                    <h3>Tartare de poulpe acidulé</h3>
                     <p class="menu__items--txt">Aux zestes d'orange</p>
-                    <p class="menu__items--txt"><strong>25€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>25€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Velouté de légumes d'antan</h3>
                 <div class="menu__items">
+                    <h3>Velouté de légumes d'antan</h3>
                     <p class="menu__items--txt">Carotte, panais, topinambour</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Soupe à l'oignon</h3>
                 <div class="menu__items">
+                    <h3>Soupe à l'oignon</h3>
                     <p class="menu__items--txt">Revisitée</p>
-                    <p class="menu__items--txt"><strong>20€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>20€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">PLATS</h2>
             <div class="menu__content">
-                <h3>Coquilles Saint-Jacques</h3>
                 <div class="menu__items">
+                    <h3>Coquilles Saint-Jacques</h3>
                     <p class="menu__items--txt">Accompagnées d'une purée de panais</p>
-                    <p class="menu__items--txt"><strong>40€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>40€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Magret de canard</h3>
                 <div class="menu__items">
+                    <h3>Magret de canard</h3>
                     <p class="menu__items--txt">Et parmentier de pommes de terre</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                 <div class="menu__items">
+                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                     <p class="menu__items--txt">Sur son lit de gnocchis aux légumes</p>
-                    <p class="menu__items--txt"><strong>44€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>44€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">DESSERTS</h2>
             <div class="menu__content">
-                <h3>Pétales de violettes glacés</h3>
                 <div class="menu__items">
+                    <h3>Pétales de violettes glacés</h3>
                     <p class="menu__items--txt">Et purée de noisettes</p>
-                    <p class="menu__items--txt"><strong>18€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>18€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Fondant au chocolat</h3>
                 <div class="menu__items">
+                    <h3>Fondant au chocolat</h3>
                     <p class="menu__items--txt">Revisité</p>
-                    <p class="menu__items--txt"><strong>22€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>22€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Millefeuille croustillant</h3>
                 <div class="menu__items">
+                    <h3>Millefeuille croustillant</h3>
                     <p class="menu__items--txt">Myrtilles et pâte d'amande</p>
-                    <p class="menu__items--txt"><strong>23€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>23€</strong></p>
             </div>
         </section>
         <div class="CTA"><button class="Btn">Commander</button></div>
@@ -116,8 +118,8 @@
                     </div>
                 </a>
             </li>   
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Mentions légales</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Contact</a></li>
         </ul>
     </footer>
 </body>
