--- a/index.html
+++ b/index.html
@@ -29,26 +29,38 @@
         <section class="Fonctionnement">
             <h2 class="IndexSubtitle">Fonctionnement</h2>
             <div class="Fonctionnement__list">
-                <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
-                <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-list-ul"></i>Composez votre menu</p>
+                <div class="Fonctionnement__list--content">
+                    <span class="Fonctionnement__list--number">1</span>
+                    <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
+                </div>
+                <div class="Fonctionnement__list--content">
+                    <span class="Fonctionnement__list--number">2</span>
+                    <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-list-ul"></i>Composez votre menu</p>
+                </div>
+                <div class="Fonctionnement__list--content">
+                    <span class="Fonctionnement__list--number">3</span>
                 <p class="Fonctionnement__list--txt"><i class="icon fa-solid fa-store"></i>Dégustez au restaurant</p>
+                </div>
             </div>
         </section>
         <section class="restaurants">
             <h2 class="IndexSubtitle">Restaurants</h2>
             <div class="restaurants__cards">
-                <a href="restaurants/lapalettedugout.html" alt="Restaurant La palette du goût">
-                    <article class="restaurants__card">
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
-                        <div class="restaurants__card--content">
-                            <div>
-                                <h3 class="restaurants__card--title">La palette du goût</h3>
-                                <p class="restaurants__card--subtitle">Ménilmontant</p>
+                <div>
+                    <span class="badge__nouveau">Nouveau</span>
+                    <a href="restaurants/lapalettedugout.html" alt="Restaurant La palette du goût" class="restaurant__badge">
+                        <article class="restaurants__card">
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
+                            <div class="restaurants__card--content">
+                                <div>
+                                    <h3 class="restaurants__card--title">La palette du goût</h3>
+                                    <p class="restaurants__card--subtitle">Ménilmontant</p>
+                                </div>
+                                <i class="fa-xl fa-regular fa-heart"></i>
                             </div>
-                            <i class="fa-xl fa-regular fa-heart"></i>
-                        </div>
-                    </article>
-                </a>
+                        </article>
+                    </a>
+                </div>
                 <a href="restaurants/lanoteenchantee.html" alt="Restaurant La note enchantée">
                     <article class="restaurants__card">
                         <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
@@ -105,8 +117,8 @@
                     Devenir partenaire
                 </div>
             </a>
-            <a href="#" class="">Mentions légales</a>
-            <a href="#">Contact</a>
+            <a href="#" class="footer__list--txtnormal">Mentions légales</a>
+            <a href="#"class="footer__list--txtnormal">Contact</a>
         </div>
     </footer>
 </body>
