--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -13,13 +13,15 @@
 
 <body>
     <header class="headerMenu">
+        <div class="headerMenu__retour">
             <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
+        </div>
+        <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" class="restaurant__img">
     </header>
 
     <main class="main__menu">
         <div class="menu__card">
-            <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
             <div class="menu__card--content">
                 <h1 class="menu__card--title">La note enchantée</h1>
                 <i class="fa-xl fa-regular fa-heart"></i>
@@ -28,80 +30,80 @@
         <section class="menu">
             <h2 class="subtitle-border">ENTRÉES</h2>
             <div class="menu__content">
-                <h3>Ravioles de foie gras</h3>
                 <div class="menu__items">
+                    <h3>Ravioles de foie gras</h3>
                     <p class="menu__items--txt">Accompagnées de leur crème de truffe</p>
-                    <p class="menu__items--txt"><strong>25€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>25€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Caviar osciètre</h3>
                 <div class="menu__items">
+                    <h3>Caviar osciètre</h3>
                     <p class="menu__items--txt">Sur blini à la farine de blé noir</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Homard et espuma de potiron</h3>
                 <div class="menu__items">
+                    <h3>Homard et espuma de potiron</h3>
                     <p class="menu__items--txt">Marinés aux zestes d'orange</p>
-                    <p class="menu__items--txt"><strong>20€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>20€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Foie gras de canard cuit entier</h3>
                 <div class="menu__items">
+                    <h3>Foie gras de canard cuit entier</h3>
                     <p class="menu__items--txt">Confiture de figue et pain toasté</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">PLATS</h2>
             <div class="menu__content">
-                <h3>Noix de coquilles Saint-Jacques</h3>
                 <div class="menu__items">
+                    <h3>Noix de coquilles Saint-Jacques</h3>
                     <p class="menu__items--txt">Sur lit de purée de céleri-rave</p>
-                    <p class="menu__items--txt"><strong>40€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>40€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Langoustine poêlée</h3>
                 <div class="menu__items">
+                    <h3>Langoustine poêlée</h3>
                     <p class="menu__items--txt">Purée de patate douce</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Mijoté de queue de bœuf</h3>
                 <div class="menu__items">
+                    <h3>Mijoté de queue de bœuf</h3>
                     <p class="menu__items--txt">Et riz sauvage aux zestes de citron</p>
-                    <p class="menu__items--txt"><strong>44€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>44€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">DESSERTS</h2>
             <div class="menu__content">
-                <h3>Macaron noisette et chocolat</h3>
                 <div class="menu__items">
+                    <h3>Macaron noisette et chocolat</h3>
                     <p class="menu__items--txt">Glace au caramel brun et sel de Guérande</p>
-                    <p class="menu__items--txt"><strong>18€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>18€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Baba au rhum revisité</h3>
                 <div class="menu__items">
+                    <h3>Baba au rhum revisité</h3>
                     <p class="menu__items--txt">Avec son coulis de citron</p>
-                    <p class="menu__items--txt"><strong>22€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>22€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Tarte au citron meringuée</h3>
                 <div class="menu__items">
+                    <h3>Tarte au citron meringuée</h3>
                     <p class="menu__items--txt">Déstructurée</p>
-                    <p class="menu__items--txt"><strong>23€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>23€</strong></p>
             </div>
         </section>
         <div class="CTA"><button class="Btn">Commander</button></div>
@@ -123,8 +125,8 @@
                     </div>
                 </a>
             </li>   
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Mentions légales</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Contact</a></li>
         </ul>
     </footer>
 </body>
