--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -13,13 +13,15 @@
 
 <body>
     <header class="headerMenu">
+        <div class="headerMenu__retour">
             <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
+        </div>
+        <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût" class="restaurant__img">
     </header>
 
     <main class="main__menu">
         <div class="menu__card">
-            <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
             <div class="menu__card--content">
                 <h1 class="menu__card--title">La palette du goût</h1>
                 <i class="fa-xl fa-regular fa-heart"></i>
@@ -28,73 +30,73 @@
         <section class="menu">
             <h2 class="subtitle-border">ENTRÉES</h2>
             <div class="menu__content">
-                <h3>Fricassée d'escargots</h3>
                 <div class="menu__items">
+                    <h3>Fricassée d'escargots</h3>
                     <p class="menu__items--txt">Au piment d'Espelette</p>
-                    <p class="menu__items--txt"><strong>25€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>25€</strong></p> 
             </div>
             <div class="menu__content">
-                <h3>Foie gras de canard mi-cuit</h3>
                 <div class="menu__items">
+                    <h3>Foie gras de canard mi-cuit</h3>
                     <p class="menu__items--txt">Et ses copeaux de truffe noire</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Œuf au plat</h3>
                 <div class="menu__items">
+                    <h3>Œuf au plat</h3>
                     <p class="menu__items--txt">Assaisonné à la truffe sur lit de caviar</p>
-                    <p class="menu__items--txt"><strong>20€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>20€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">PLATS</h2>
             <div class="menu__content">
-                <h3>Filet de boeuf aux herbes</h3>
                 <div class="menu__items">
+                    <h3>Filet de boeuf aux herbes</h3>
                     <p class="menu__items--txt">Accompagné de sa ribambelle de légumes</p>
-                    <p class="menu__items--txt"><strong>40€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>40€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Parmentier de queue de boeuf</h3>
                 <div class="menu__items">
+                    <h3>Parmentier de queue de boeuf</h3>
                     <p class="menu__items--txt">À la truffe noire sur sa purée de panais</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
-                </div>
+                </div>    
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Filet de turbot</h3>
                 <div class="menu__items">
+                    <h3>Filet de turbot</h3>
                     <p class="menu__items--txt">Aux agrumes</p>
-                    <p class="menu__items--txt"><strong>44€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>44€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">DESSERTS</h2>
             <div class="menu__content">
-                <h3>Paris-Brest</h3>
                 <div class="menu__items">
+                    <h3>Paris-Brest</h3>
                     <p class="menu__items--txt">Revisité</p>
-                    <p class="menu__items--txt"><strong>18€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>18€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Macaron au chocolat d'exception</h3>
                 <div class="menu__items">
+                    <h3>Macaron au chocolat d'exception</h3>
                     <p class="menu__items--txt">Et glace à la vanille de Madagascar</p>
-                    <p class="menu__items--txt"><strong>22€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>22€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Mousse au chocolat</h3>
                 <div class="menu__items">
+                    <h3>Mousse au chocolat</h3>
                     <p class="menu__items--txt">Au piment d'Espelette et à la truffe noire</p>
-                    <p class="menu__items--txt"><strong>23€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>23€</strong></p>
             </div>
         </section>
         <div class="CTA"><button class="Btn">Commander</button></div>
@@ -116,8 +118,8 @@
                     </div>
                 </a>
             </li>   
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Mentions légales</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Contact</a></li>
         </ul>
     </footer>
 </body>
