--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -13,13 +13,15 @@
 
 <body>
     <header class="headerMenu">
+        <div class="headerMenu__retour">
             <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
+        </div>
+        <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens" class="restaurant__img">
     </header>
 
     <main class="main__menu">
         <div class="menu__card">
-            <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
             <div class="menu__card--content">
                 <h1 class="menu__card--title">Le délice des sens</h1>
                 <i class="fa-xl fa-regular fa-heart"></i>
@@ -28,73 +30,73 @@
         <section class="menu">
             <h2 class="subtitle-border">ENTRÉES</h2>
             <div class="menu__content">
-                <h3>Tartare de thon</h3>
                 <div class="menu__items">
+                    <h3>Tartare de thon</h3>
                     <p class="menu__items--txt">Assaisonné au yuzu</p>
-                    <p class="menu__items--txt"><strong>25€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>25€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Bouchée de homard croustillant</h3>
                 <div class="menu__items">
+                    <h3>Bouchée de homard croustillant</h3>
                     <p class="menu__items--txt">Et sa farandole de petits légumes</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Velouté de cèpes</h3>
                 <div class="menu__items">
+                    <h3>Velouté de cèpes</h3>
                     <p class="menu__items--txt">Aux truffes</p>
-                    <p class="menu__items--txt"><strong>20€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>20€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">PLATS</h2>
             <div class="menu__content">
-                <h3>Poulet rôti aux herbes de Provence</h3>
                 <div class="menu__items">
+                    <h3>Poulet rôti aux herbes de Provence</h3>
                     <p class="menu__items--txt">Et sa crème de truffe</p>
-                    <p class="menu__items--txt"><strong>40€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>40€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Langouste rôtie</h3>
                 <div class="menu__items">
+                    <h3>Langouste rôtie</h3>
                     <p class="menu__items--txt">Et ses légumes de saison</p>
-                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>35€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Côte de bœuf Angus</h3>
                 <div class="menu__items">
+                    <h3>Côte de bœuf Angus</h3>
                     <p class="menu__items--txt">Et sa purée de panais</p>
-                    <p class="menu__items--txt"><strong>44€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>44€</strong></p>
             </div>
         </section>
         <section class="menu">
             <h2 class="subtitle-border">DESSERTS</h2>
             <div class="menu__content">
-                <h3>Farandole de desserts</h3>
                 <div class="menu__items">
+                    <h3>Farandole de desserts</h3>
                     <p class="menu__items--txt">Du chef</p>
-                    <p class="menu__items--txt"><strong>18€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>18€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Crème brûlée</h3>
                 <div class="menu__items">
+                    <h3>Crème brûlée</h3>
                     <p class="menu__items--txt">Revisitée</p>
-                    <p class="menu__items--txt"><strong>22€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>22€</strong></p>
             </div>
             <div class="menu__content">
-                <h3>Tiramisu</h3>
                 <div class="menu__items">
+                    <h3>Tiramisu</h3>
                     <p class="menu__items--txt">À la noisette</p>
-                    <p class="menu__items--txt"><strong>23€</strong></p>
                 </div>
+                <p class="menu__items--txt"><strong>23€</strong></p>
             </div>
         </section>
         <div class="CTA"><button class="Btn">Commander</button></div>
@@ -116,8 +118,8 @@
                     </div>
                 </a>
             </li>   
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Mentions légales</a></li>
+            <li><a href="#" class="footer__list--txtnormal">Contact</a></li>
         </ul>
     </footer>
 </body>
